Export: Add PID information to reused datasets table